@@ -14,11 +14,7 @@ __BEGIN_DECLS
 /*! \struct zEP
  * \brief Euler parameter.
  */
-#ifdef __cplusplus
-union zEP{
-#else
-typedef union{
-#endif /* __cplusplus */
+ZDEF_UNION( zEP ){
   struct{
     double w;
     zVec3D v;
@@ -26,10 +22,27 @@ typedef union{
   double e[4];
 #ifdef __cplusplus
   zEP() : e{ 1, 0, 0, 0 } {}
-};
-#else
-} zEP;
+  zEP &create(double w, double x, double y, double z);
+  zEP &createAA(double theta, zVec3D *axis);
+  zEP &ident();
+  zEP &copy(zEP &src);
+  bool isIdent();
+  zVec3D &toAA(zVec3D &aa);
+  zEP &fromAA(zVec3D &aa);
+  zMat3D &toMat3D(zMat3D &m);
+  zEP &fromMat3D(zMat3D &m);
+  zVec3D &rot(zVec3D &from, zVec3D &to);
+  friend zEP operator+(zEP &ep1, zEP &ep2);
+  friend zEP operator-(zEP &ep1, zEP &ep2);
+  friend zEP operator*(zEP &ep1, double k);
+  zEP &sub(zEP &e);
+  zEP &rev();
+  zEP &mul(double k);
+  zEP &cat(double k, zEP &e);
+  double norm();
+  zEP &normalize();
 #endif /* __cplusplus */
+};
 
 /*! \brief create and copy Euler parameter.
  *
@@ -106,6 +119,9 @@ __EXPORT zEP *zAngVel2EPVel(zVec3D *angvel, zEP *ep, zEP *epvel);
 
 /*! \brief Euler parameter arithmetics.
  *
+ * zEPAdd() add two Euler parameters \a ep1 and \a ep2 and puts it into \a ep.
+ * zEPSub() subtracts an Euler parameter \a ep2 from another \a ep1 and puts it into \a ep.
+ *
  * zEPRev() reverses Euler parameter \a ep1 and puts it into \a ep.
  * zEPRevDRC() directly reverses Euler parameter \a ep.
  *
@@ -134,6 +150,7 @@ __EXPORT zEP *zAngVel2EPVel(zVec3D *angvel, zEP *ep, zEP *epvel);
  *
  * zEPInnerProd() and zEPNorm() return the result value.
  */
+__EXPORT zEP *zEPAdd(zEP *ep1, zEP *ep2, zEP *ep);
 __EXPORT zEP *zEPSub(zEP *ep1, zEP *ep2, zEP *ep);
 __EXPORT zEP *zEPRev(zEP *ep1, zEP *ep);
 __EXPORT zEP *zEPMul(zEP *ep1, double k, zEP *ep);
@@ -196,6 +213,40 @@ __EXPORT zMat3D *zMat3DInterDiv(zMat3D *m1, zMat3D *m2, double t, zMat3D *m);
  */
 __EXPORT void zEPFPrint(FILE *fp, zEP *ep);
 #define zEPPrint(e) zEPFPrint( stdout, e )
+
+#ifdef __cplusplus
+inline zEP &zEP::create(double w, double x, double y, double z){ return *zEPCreate( this, w, x, y, z ); }
+inline zEP &zEP::createAA(double theta, zVec3D *axis){ return *zEPCreateAA( this, theta, axis ); }
+inline zEP &zEP::ident(){ return *zEPIdent( this ); }
+inline zEP &zEP::copy(zEP &src){ zEPCopy( &src, this ); return *this; }
+inline bool zEP::isIdent(){ return zEPIsIdent( this ); }
+inline zVec3D &zEP::toAA(zVec3D &aa){ return *zEP2AA( this, &aa ); }
+inline zEP &zEP::fromAA(zVec3D &aa){ return *zAA2EP( &aa, this ); }
+inline zMat3D &zEP::toMat3D(zMat3D &m){ return *zMat3DFromEP( &m, this ); }
+inline zEP &zEP::fromMat3D(zMat3D &m){ return *zMat3DToEP( &m, this ); }
+inline zVec3D &zEP::rot(zVec3D &from, zVec3D &to){ return *zEPRotVec3D( this, &from, &to ); }
+inline zEP operator+(zEP &ep1, zEP &ep2){
+  zEP e;
+  zEPAdd( &ep1, &ep2, &e );
+  return e;
+}
+inline zEP operator-(zEP &ep1, zEP &ep2){
+  zEP e;
+  zEPSub( &ep1, &ep2, &e );
+  return e;
+}
+inline zEP operator*(zEP &ep1, double k){
+  zEP e;
+  zEPMul( &ep1, k, &e );
+  return e;
+}
+inline zEP &zEP::sub(zEP &e){ return *zEPSubDRC( this, &e ); }
+inline zEP &zEP::rev(){ return *zEPRevDRC( this ); }
+inline zEP &zEP::mul(double k){ return *zEPMulDRC( this, k ); }
+inline zEP &zEP::cat(double k, zEP &e){ return *zEPCatDRC( this, k, &e ); }
+inline double zEP::norm(){ return zEPNorm( this ); }
+inline zEP &zEP::normalize(){ return *zEPNormalize( this ); }
+#endif /* __cplusplus */
 
 __END_DECLS
 
